# zero2prod

./: Cargo.toml  Dockerfile  fly.toml
.github/workflows/: fly.yml  general.yml  rust.yml
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
