[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
config = { version = "0.14" }
sqlx = { version = "0.7.3", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
uuid = { version = "1.7.0", features = ["v4"] }
chrono = { version = "0.4.9", default-features = false, features = ["clock"] }

[dev-dependencies]
reqwest = "0.11.24"
